--- a/style.css
+++ b/style.css
@@ -3,21 +3,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #ECF6FA;
+}
 a{
     text-decoration: none;
 }
 kbd{
     position: relative;
-    border: 1px solid red;
-    width: 4em;
-    height: 4em;
+    width: 2em;
+    height: 2.5em;
+    margin: 5px;
+    line-height: 2.5em;
     display: inline-block;
     text-transform: uppercase;
+    color: #483EE6;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px rgba(43, 42, 19, 0.18);
 }
 kbd > button{
     position: absolute;
     right: 0;
     bottom: 0;
+    display: none;
+}
+kbd:hover > button{
+    display: inline-block;
 }
 main{
     text-align: center;
@@ -27,8 +41,8 @@ main{
     display: inline-block;
 }
 .wrapper > div:nth-child(2){
-    margin-left: 2em;
+    margin-left: 1em;
 }
 .wrapper > div:nth-child(3){
-    margin-left: 4em;
+    margin-left: -1em;
 }
