--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #ECF6FA;
+    background: grey url(./wall.jpg) no-repeat center center;
+    background-size: cover;
 }
 a{
     text-decoration: none;
 }
-kbd{
+.key{
     position: relative;
     width: 2em;
     height: 2.5em;
@@ -22,23 +23,37 @@ kbd{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     border-radius: 10px;
-    box-shadow: 3px 3px 5px rgba(43, 42, 19, 0.18);
+    box-shadow: 0px 3px 7px -1px rgba(28,28,28,0.59);
+}
+.key img{
+    position: absolute;
+    left: 3px;
+    top: 3px;
+    width: 16px;
+    height: 16px;
 }
 kbd > button{
     position: absolute;
     right: 0;
     bottom: 0;
     display: none;
+    color: #8B8B91;
+    border-radius: 20px;
 }
 kbd:hover > button{
     display: inline-block;
 }
 main{
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 .wrapper{
-    margin: 0 auto;
-    display: inline-block;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
 }
 .wrapper > div:nth-child(2){
     margin-left: 1em;
